# hpa-mdo

./: .gitignore  .pre-commit-config.yaml  CURRENT_MAINLINE.md  README.md  claude.md  gpt_pro_cfrp_consultation.md  project_state.yaml  pyproject.toml
hpa_meshing_package/: README.md  pyproject.toml
hpa_meshing_package/configs/: aircraft_assembly.esp_rebuilt_coarse_smoke.yaml  aircraft_assembly.esp_rebuilt_coarse_smoke_hxt.yaml  aircraft_assembly.openvsp_baseline.yaml  fairing_solid.default.yaml  fairing_vented.default.yaml  main_wing.default.yaml  tail_wing.default.yaml
hpa_meshing_package/docs/: ACCEPTANCE.md  ARCHITECTURE.md  CODEX_TASK.md  OPEN_QUESTIONS.md  current_status.md  esp_opencsm_feasibility.md  esp_research_handoff_2026-04-21.md  mesh_policy_stabilization_research_note.md  provider_integration_mainline.md  topology_compiler_architecture_2026-04-23.md
hpa_meshing_package/docs/contracts/: GeometryProviderResult.md  component_family_route_smoke_matrix.v1.md  convergence_gate.v1.md  fairing_solid_mesh_handoff_smoke.v1.md  fairing_solid_real_geometry_smoke.v1.md  fairing_solid_real_mesh_handoff_probe.v1.md  fairing_solid_real_su2_handoff_probe.v1.md  fairing_solid_reference_override_su2_handoff_probe.v1.md  fairing_solid_reference_policy_probe.v1.md  fairing_solid_su2_handoff_smoke.v1.md  main_wing_esp_rebuilt_geometry_smoke.v1.md  main_wing_geometry_provenance_probe.v1.md  main_wing_mesh_handoff_smoke.v1.md  main_wing_real_mesh_handoff_probe.v1.md  main_wing_real_solver_smoke_probe.v1.md  main_wing_real_su2_handoff_probe.v1.md  main_wing_reference_geometry_gate.v1.md  main_wing_solver_validation_policy.v1.md  main_wing_station_seam_brep_hotspot_probe.v1.md  main_wing_station_seam_export_format_boundary_probe.v1.md  main_wing_station_seam_export_metadata_source_audit.v1.md  main_wing_station_seam_export_source_audit.v1.md  main_wing_station_seam_export_strategy_probe.v1.md  main_wing_station_seam_internal_cap_probe.v1.md  main_wing_station_seam_profile_parametrization_audit.v1.md  main_wing_station_seam_profile_resample_brep_validation_probe.v1.md  main_wing_station_seam_profile_resample_repair_feasibility_probe.v1.md  main_wing_station_seam_profile_resample_strategy_probe.v1.md  main_wing_station_seam_same_parameter_feasibility.v1.md  (+27 more)
hpa_meshing_package/examples/: cases.yaml
hpa_meshing_package/tests/: test_cli.py  test_convergence_gate.py  test_esp_pipeline_normalization.py  test_esp_rebuilt_provider.py  test_esp_runtime.py  test_example_configs.py  test_fairing_solid_mesh_handoff_smoke.py  test_fairing_solid_real_geometry_smoke.py  test_fairing_solid_real_mesh_handoff_probe.py  test_fairing_solid_real_su2_handoff_probe.py  test_fairing_solid_reference_override_su2_handoff_probe.py  test_fairing_solid_reference_policy_probe.py  test_fairing_solid_su2_handoff_smoke.py  test_fallback.py  test_frozen_baseline.py  test_geometry_family_dispatch.py  test_gmsh_backend.py  test_main_wing_esp_rebuilt_geometry_smoke.py  test_main_wing_geometry_provenance_probe.py  test_main_wing_gmsh_curve_station_rebuild_audit.py  test_main_wing_gmsh_defect_entity_trace.py  test_main_wing_lift_acceptance_diagnostic.py  test_main_wing_mesh_handoff_smoke.py  test_main_wing_mesh_quality_hotspot_audit.py  test_main_wing_mesh_quality_hotspot_cli_route.py  test_main_wing_openvsp_defect_station_audit.py  test_main_wing_openvsp_section_station_topology_fixture.py  test_main_wing_panel_su2_lift_gap_debug.py  test_main_wing_panel_wake_semantics_audit.py  test_main_wing_real_mesh_handoff_probe.py  test_main_wing_real_solver_smoke_probe.py  test_main_wing_real_su2_handoff_probe.py  test_main_wing_reference_geometry_gate.py  test_main_wing_route_readiness.py  test_main_wing_solver_budget_comparison.py  test_main_wing_station_seam_brep_hotspot_probe.py  test_main_wing_station_seam_export_format_boundary_probe.py  test_main_wing_station_seam_export_metadata_source_audit.py  test_main_wing_station_seam_export_source_audit.py  test_main_wing_station_seam_export_strategy_probe.py  (+50 more)
(+1191 files in other folders)
