[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpa-mdo"
version = "2.0.0"
description = "Human-Powered Aircraft Multidisciplinary Design Optimization Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "matplotlib>=3.7",
    "openmdao>=3.28",
]

[project.optional-dependencies]
oas = ["openaerostruct>=2.7"]
api = ["fastapi>=0.100", "uvicorn>=0.23"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
cad = ["cadquery>=2.4"]
all = ["hpa-mdo[oas,api,mcp,dev,cad]"]

[project.scripts]
hpa-mdo = "hpa_mdo.api.server:main"
hpa-optimize = "hpa_mdo.cli:main"
hpa-autoresearch = "hpa_mdo.autoresearch.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-v -m 'not slow'"
testpaths = ["tests"]
markers = [
    "requires_vspaero: tests that need VSPAero binary",
    "slow: long-running integration/regression tests",
]

[tool.coverage.run]
source = ["hpa_mdo"]
omit = ["tests/*"]
